--- a/helm/templates/deploy.yaml
+++ b/helm/templates/deploy.yaml
@@ -21,11 +21,11 @@ spec:
         - containerPort: {{ .Values.containerPort }}
         resources:
           requests:
-              cpu: {{ .Values.resources.cpu }}
-              memory: {{ .Values.resources.memory }}
+              cpu: {{ .Values.resources.requests.cpu }}
+              memory: {{ .Values.resources.resources.memory }}
           limits:
-              cpu: {{ .Values.limits.cpu }}
-              memory: {{ .Values.limits.memory }}
+              cpu: {{ .Values.resources.limits.cpu }}
+              memory: {{ .Values.resources.limits.memory }}
         livenessProbe:
           httpGet:
             path: {{ .Values.livenessProbe.path }}
